2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.h
	* src/gdict-app.c (gdict_app_finalize), (gdict_window_created_cb),
	(lookup_start_cb), (definition_found_cb), (lookup_end_cb),
	(gdict_look_up_word_and_quit), (gdict_init): support looking up
	multiple words from the console using the --look-up <word> command
	line switch more than once; this also works with the --no-window
	switch, for console-only output.

	* src/gdict-window.c (gdict_window_new): fill the look up entry if 
	a word is passed to the GdictWindow constructor.

	* src/gdict-about.c: update copyright date.

2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-window.c (gdict_window_set_word), (entry_activate_cb),
	(gdict_window_drag_data_received_cb), (gdict_window_new): if a word is
	passed to the GdictWindow constructor it'll be search automatically,
	instead of requiring the user to confirm by pressing enter.

2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (gdict_applet_finalize): really commit the removal
	of the idle loop.

2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gtkalignedwindow.c (gtk_aligned_window_class_init),
	(gtk_aligned_window_realize), (gtk_aligned_window_map),
	(gtk_aligned_window_show), (gtk_aligned_window_position): make the
	window align on realization and re-align every show request; also,
	set the gravity for the window manager to pick up.

2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (gdict_applet_finalize): force the removal of
	the idle loop, in case the finalization function is called when the
	idle loop is still running.

2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.c (gdict_app_init): remove callback to the "die"
	signal (closes bug #329911).

2006-02-04  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.c (gdict_app_init): check whether there is a file
	with the same name of the data directory under $HOME/.gnome2, and