@@ -1,3 +1,10 @@
+2006-02-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* libgdict/gdict-client-context.c (gdict_client_context_io_watch_cb),
+	(gdict_client_context_parse_line): make the dictionary response code
+	parsing a bit more robust; add a bunch of debug messages (closes
+	bug #330782).
+
 2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* src/gdict-app.h
